==> Ai-Thinker-Open/aithinker_dev_open_sdk/adt/adt_os/adapter_chip/chip/port/bl602/peripheral_drive/spi/aiio_spi.c <==
#include "aiio_spi.h"
#include <string.h>
#include <stdio.h>
#include <device/vfs_spi.h>
#include <vfs_err.h>
#include <vfs_register.h>
#include <aos/kernel.h>
#include <bl_dma.h>
#include <bl_gpio.h>
#include <bl602_spi.h>
#include <bl602_gpio.h>
#include <bl602_glb.h>
#include <bl602_dma.h>
#include <bl602.h>
#include <bl_irq.h>
#include <bl_dma.h>
#include <bl_gpio.h>
#include <hosal_dma.h>
#include <FreeRTOS.h>
#include <task.h>
#include <timers.h>
#include <event_groups.h>
#include <libfdt.h>
#include <utils_log.h>
#include <blog.h>
#include <event_groups.h>
#define AIIO_FUNC_FAIL -3
#define HOSAL_SPI_MODE_MASTER 0        /**< spi communication is master mode */
#define HOSAL_SPI_MODE_SLAVE 1         /**< spi communication is slave mode */
#define HOSAL_WAIT_FOREVER 0xFFFFFFFFU /**< DMA transmission timeout */
#define LLI_BUFF_SIZE 2048
#define EVT_GROUP_SPI_TX (1 << 0)
#define EVT_GROUP_SPI_RX (1 << 1)
#define EVT_GROUP_SPI_TR (EVT_GROUP_SPI_TX | EVT_GROUP_SPI_RX)

int32_t aiio_spi_master_init(aiio_spi_enum_t aiio_spi_port, aiio_spi_pin_cfg_t *aiio_spi_cfg)
{
    if (aiio_spi_port_cal(aiio_spi_port) != AIIO_FUNC_FAIL)
    {
        aiio_log_e("aiio_spi_master_init function aiio_spi_port is repetition!");
        return AIIO_ERROR;
    }

    switch (aiio_spi_port)
    {
    case AIIO_SPI_0:
        /* spi port set */
        aiio_spi_list[aiio_spi_num].aiio_spi_dev.port = 0;
        aiio_spi_list[aiio_spi_num].aiio_spi_dev.config.mode = HOSAL_SPI_MODE_MASTER;
        aiio_spi_list[aiio_spi_num].aiio_spi_dev.config.dma_enable = 0;
        aiio_spi_list[aiio_spi_num].aiio_spi_dev.config.polar_phase = 0;
        aiio_spi_list[aiio_spi_num].aiio_spi_dev.config.freq = 100000;
        aiio_spi_list[aiio_spi_num].aiio_spi_dev.config.pin_cs = aiio_spi_cfg->aiio_gpio_cs_pin;
        aiio_spi_list[aiio_spi_num].aiio_spi_dev.config.pin_clk = aiio_spi_cfg->aiio_gpio_clk_pin;
        aiio_spi_list[aiio_spi_num].aiio_spi_dev.config.pin_mosi = aiio_spi_cfg->aiio_gpio_mosi_pin;
        aiio_spi_list[aiio_spi_num].aiio_spi_dev.config.pin_miso = aiio_spi_cfg->aiio_gpio_miso_pin;
        hosal_spi_init(&aiio_spi_list[aiio_spi_num].aiio_spi_dev);
        break;

    case AIIO_SPI_1:
        aiio_log_w("aiio_spi_master_init function AIIO_I2C_1 is nonsupport!");
        break;

    case AIIO_SPI_2:
        aiio_log_w("aiio_spi_master_init function AIIO_I2C_2 is nonsupport!");
        break;

    case AIIO_SPI_SOFT:
        aiio_log_w("aiio_spi_master_init function AIIO_I2C_SOFT is nonsupport!");
        break;

    default:
        break;
    }

    aiio_spi_list[aiio_spi_num].aiio_spi_port = aiio_spi_port;
    aiio_spi_cfg_copy(&aiio_spi_list[aiio_spi_num], aiio_spi_cfg);
    aiio_spi_num++;

    return AIIO_OK;
}

int32_t aiio_spi_master_deinit(aiio_spi_enum_t aiio_spi_port)
{
    if (aiio_spi_port_cal(aiio_spi_port) == AIIO_FUNC_FAIL)
    {
        aiio_log_e("aiio_spi_master_deinit function aiio_spi_port is nonsupport!");
        return AIIO_ERROR;
    }

    switch (aiio_spi_port)
    {
    case AIIO_SPI_0:
        hosal_spi_finalize(&aiio_spi_list[aiio_spi_port_cal(aiio_spi_port)].aiio_spi_dev);
        break;

    case AIIO_SPI_1:
        aiio_log_w("aiio_spi_master_deinit function AIIO_SPI_1 is nonsupport!\r\n");
        break;

    case AIIO_SPI_2:
        aiio_log_w("aiio_spi_master_deinit function AIIO_SPI_2 is nonsupport!\r\n");
        break;

    case AIIO_SPI_SOFT:
        aiio_log_w("aiio_spi_master_deinit function AIIO_SPI_SOFT is nonsupport!\r\n");
        break;

    default:
        break;
    }

    return AIIO_OK;
}

int32_t aiio_spi_master_write_and_read(aiio_spi_enum_t aiio_spi_port, uint8_t *send_data, uint8_t *rec_data, uint32_t data_len, uint32_t timeout)
{
    if (aiio_spi_port_cal(aiio_spi_port) == AIIO_FUNC_FAIL)
    {
        aiio_log_e("aiio_spi_master_write_and_read function aiio_spi_port is nonsupport!");
        return AIIO_ERROR;
    }

    switch (aiio_spi_port)
    {
    case AIIO_SPI_0:
        hosal_spi_set_cs(aiio_spi_list[aiio_spi_port_cal(aiio_spi_port)].aiio_spi_dev.config.pin_cs, 0);
        hosal_spi_send_recv(&aiio_spi_list[aiio_spi_port_cal(aiio_spi_port)].aiio_spi_dev, (uint8_t *)send_data, (uint8_t *)rec_data, data_len, timeout);
        hosal_spi_set_cs(aiio_spi_list[aiio_spi_port_cal(aiio_spi_port)].aiio_spi_dev.config.pin_cs, 1);
        break;

    case AIIO_SPI_1:
        aiio_log_w("aiio_spi_master_write_and_read function AIIO_SPI_1 is nonsupport!\r\n");
        break;

    case AIIO_SPI_2:
        aiio_log_w("aiio_spi_master_write_and_read function AIIO_SPI_2 is nonsupport!\r\n");
        break;

    case AIIO_SPI_SOFT:
        aiio_log_w("aiio_spi_master_write_and_read function AIIO_SPI_SOFT is nonsupport!\r\n");
        break;

    default:
        break;
    }

    return AIIO_OK;
}

int32_t aiio_spi_master_write(aiio_spi_enum_t aiio_spi_port, uint8_t *addr, uint32_t addr_len, uint8_t *send_data, uint32_t data_len, uint32_t timeout)
{
    if (aiio_spi_port_cal(aiio_spi_port) == AIIO_FUNC_FAIL)
    {
        aiio_log_e("aiio_spi_master_write function aiio_spi_port is nonsupport!");
        return AIIO_ERROR;
    }

    uint8_t *s_buf = (uint8_t *)malloc(sizeof(uint8_t) * (addr_len + data_len));
    uint8_t *r_buf = (uint8_t *)malloc(sizeof(uint8_t) * (addr_len + data_len));
    for (int i = 0; i < addr_len; i++)
    {
        s_buf[i] = addr[i];
    }
    for (int i = 0; i < data_len; i++)
    {
        s_buf[addr_len + i] = send_data[i];
    }
    switch (aiio_spi_port)
    {
    case AIIO_SPI_0:
        hosal_spi_set_cs(aiio_spi_list[aiio_spi_port_cal(aiio_spi_port)].aiio_spi_dev.config.pin_cs, 0);
        hosal_spi_send_recv(&aiio_spi_list[aiio_spi_port_cal(aiio_spi_port)].aiio_spi_dev, (uint8_t *)s_buf, (uint8_t *)r_buf, data_len + addr_len, 10000);
        hosal_spi_set_cs(aiio_spi_list[aiio_spi_port_cal(aiio_spi_port)].aiio_spi_dev.config.pin_cs, 1);
        free(s_buf);
        free(r_buf);
        break;

    case AIIO_SPI_1:
        aiio_log_e("aiio_spi_master_write function AIIO_SPI_1 is nonsupport!\r\n");
        break;

    case AIIO_SPI_2:
        aiio_log_e("aiio_spi_master_write function AIIO_SPI_2 is nonsupport!\r\n");
        break;

    case AIIO_SPI_SOFT:
        aiio_log_e("aiio_spi_master_write function AIIO_SPI_SOFT is nonsupport!\r\n");
        break;

    default:
        aiio_log_e("aiio_spi_master_read function AIIO_SPI_SOFT is nonsupport!");
        break;
    }

    return AIIO_OK;
}

int32_t aiio_spi_master_read(aiio_spi_enum_t aiio_spi_port, uint8_t *addr, uint32_t addr_len, uint8_t *rec_data, uint32_t data_len, uint32_t timeout)
{
    if (aiio_spi_port_cal(aiio_spi_port) == AIIO_FUNC_FAIL)
    {
        aiio_log_e("aiio_spi_master_read function aiio_spi_port is nonsupport!");
        return AIIO_ERROR;
    }

    uint8_t *s_buf = (uint8_t *)malloc(sizeof(uint8_t) * (addr_len + data_len));
    uint8_t *r_buf = (uint8_t *)malloc(sizeof(uint8_t) * (addr_len + data_len));
    for (int i = 0; i < addr_len; i++)
    {
        s_buf[i] = addr[i];
    }
    switch (aiio_spi_port)
    {
    case AIIO_SPI_0:
        hosal_spi_set_cs(aiio_spi_list[aiio_spi_port_cal(aiio_spi_port)].aiio_spi_dev.config.pin_cs, 0);
        hosal_spi_send_recv(&aiio_spi_list[aiio_spi_port_cal(aiio_spi_port)].aiio_spi_dev, (uint8_t *)s_buf, (uint8_t *)r_buf, data_len + addr_len, 10000);
        hosal_spi_set_cs(aiio_spi_list[aiio_spi_port_cal(aiio_spi_port)].aiio_spi_dev.config.pin_cs, 1);
        for (int i = 0; i < data_len; i++)
        {
            rec_data[i] = r_buf[i + addr_len];
        }
        free(s_buf);
        free(r_buf);
        break;

    case AIIO_SPI_1:
        aiio_log_e("aiio_spi_master_read function AIIO_SPI_1 is nonsupport!");
        break;

    case AIIO_SPI_2:
        aiio_log_e("aiio_spi_master_read function AIIO_SPI_2 is nonsupport!");
        break;

    case AIIO_SPI_SOFT:
        aiio_log_e("aiio_spi_master_read function AIIO_SPI_SOFT is nonsupport!");
        break;

    default:
        aiio_log_e("aiio_spi_master_read function AIIO_SPI_SOFT is nonsupport!");
        break;
    }

    return AIIO_OK;
}
